# cook

./: .env.example  ClaudeErrors.md  pyproject.toml
migrations/: env.py
migrations/versions/: 001_cook_schema.py  002_recipe_overrides.py  003_add_cascade_recipe_ratings.py  004_meal_history_vendor_fk.py
scripts/: deploy.sh
src/cook/: __init__.py  __main__.py  config.py  db.py  request_processor.py  scoring.py
src/cook/handlers/: __init__.py  dietary.py  meals.py  order.py  suggest.py
systemd/: cook.service
tests/: conftest.py  test_cook_tool.py  test_handlers.py  test_request_processor.py  test_scoring.py  test_scoring_pbt.py
