[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "cook"
version = "0.1.0"
description = "Cook — food intelligence for the Holdsworth household"
requires-python = ">=3.12"
dependencies = [
    "sturmey @ git+https://github.com/Holdsworth-Ecosystem/sturmey.git",
    "apscheduler>=3.10",
    "asyncpg>=0.29",
    "pydantic-settings>=2.0",
    "structlog>=24.0",
    "sqlalchemy>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
    "hypothesis>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cook"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
